--- a/client/src/Containers/Gateway/Gateway.css
+++ b/client/src/Containers/Gateway/Gateway.css
@@ -1,36 +1,36 @@
-
+.flex-container {
+    padding-top: 100px;
+    margin: 50px 0px;
+}
 
 .subtitle-left {
     font-family: sans-serif, 'Sen';
     font-size: 45px;
-    width: 100px;
     font-weight: bold;
-    color: black;
+    color: white;
+    text-align: justify;
 }
 .subtitle-right {
     font-family: sans-serif, 'Sen';
     font-size: 45px;
-    width: 100px;
+    text-align: justify;
     font-weight: bold;
-    color: black;
+    color: white;
 }
 
 .container-text {
+    margin: auto;
     text-align: left;
-    color: black;
+    color: white;
+    padding-bottom: 30px;
 }
 
-.container-left {
-    align-content: flex-start;
-    padding: 300px 0;
-    float: left;
-    right: 30px;
-    padding: 150px 75px;
-    border-radius: 25px;
-    margin-right: 60px;
-    width: 495px;
-    border: 2px solid black;
-    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+.contain {
+    margin: 20px auto;
+    border-radius: 20px;
+    padding: 50px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     -webkit-transition: 0.2s ease-out;
     -moz-transition: 0.2s ease-out;
     -ms-transition: 0.2s ease-out;
@@ -38,8 +38,12 @@
     transition:  0.2s ease-out;
 }
 
-.container-left:hover {
-    background-image: linear-gradient(to top, #df89b5 0%, #bfd9fe 100%);
+.contain:hover {
+    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    background-size: 200% 200%;
+    -webkit-animation: AnimationName 2s ease infinite; 
+    -moz-animation: AnimationName 2s ease infinite;
+    animation: AnimationName 2s ease infinite;
     -webkit-transform:scale(1.02);
     -moz-transform:scale(1.02);
     -ms-transform:scale(1.02);
@@ -47,34 +51,21 @@
     transform:scale(1.02);
 }
 
-
-.container-right {
-    float: right;
-    padding: 150px 75px;
-    margin-left: 60px;
-    border: 1px coral;
-    height: auto;
-    width: 495px;
-    border: 2px solid black;
-    border-radius: 25px;
-    -webkit-transition: 0.2s ease-out;
-    -moz-transition: 0.2s ease-out;
-    -ms-transition: 0.2s ease-out;
-    -o-transition: 0.2s ease-out;
-    transition: 0.2s ease-out;
-    background: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
-.container-right:hover {
-    background: linear-gradient(240deg, #d299c2 0%, #fef9d7 100%);
-    background-position: right;
-    -webkit-transform:scale(1.02);
-    -moz-transform:scale(1.02);
-    -ms-transform:scale(1.02);
-    -o-transform:scale(1.02);
-    transform:scale(1.02);
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
-
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
 
 
 .title-1 {
@@ -90,17 +81,8 @@
 @media only screen 
 and (min-device-width : 320px) 
 and (max-device-width : 480px) {
-    .container-left {
-        align-content: flex-start;
-        padding: 300px 0;
-        right: 30px;
-        padding: 150px 75px;
-        border-radius: 25px;
-        margin-right: 60px;
-        height: 50%;
-        width: 100%;
-        border: 5px solid black;
-        background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+    .container {
+        background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         margin: 10px;
         -webkit-transition: 0.2s ease-out;
         -moz-transition: 0.2s ease-out;
@@ -108,21 +90,5 @@ and (max-device-width : 480px) {
         -o-transition: 0.2s ease-out;
         transition:  0.2s ease-out;
     }
-    .container-right {
-        float: right;
-        padding: 150px 75px;
-        margin-left: 60px;
-        border: 1px coral;
-        height: 50%;
-        width: 100%;
-        border:5px solid black;
-        border-radius: 25px;
-        -webkit-transition: 0.2s ease-out;
-        -moz-transition: 0.2s ease-out;
-        -ms-transition: 0.2s ease-out;
-        -o-transition: 0.2s ease-out;
-        transition: 0.2s ease-out;
-        background: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-    
-    }
+
 }
