--- a/client/src/Components/Dashboard/Dashboard.css
+++ b/client/src/Components/Dashboard/Dashboard.css
@@ -104,6 +104,7 @@ h4{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 20px;
   background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  margin: 70px 70px;
-  padding-left: 8%;
+  margin: 140px;
+  padding: 1%;
+  justify-content: center;
 }
