--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,7 @@ body {
   background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
   background-repeat: no-repeat;
   background-attachment: fixed;
+  margin-left: 5rem;
 }
 
 #editprofpag{
