--- a/client/src/GroupStudy/Chat/Chat.css
+++ b/client/src/GroupStudy/Chat/Chat.css
@@ -7,12 +7,13 @@
 }
 
 .message-box {
+
     margin-top: 100px;
     width: 50%;
     align-self: center;
     background-color: white;
     border-radius: 10px;
-    padding: 6px;
+    padding: 20px;
     height: 500px;
     display: inline-block;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -37,10 +38,11 @@
 }
 
 .message-inp {
-    margin-top: 9px;
-    width: 92%;
+    width: 100%;
 }
-.send-button {
+
+.adjusted {
+    margin-top: 50px;
 }
 
 .messages {
