--- a/client/src/Components/Dashboard/Dashboard.css
+++ b/client/src/Components/Dashboard/Dashboard.css
@@ -36,6 +36,7 @@
 #sessionList {
   padding-top: 2%;
   padding-bottom: 2%;
+  min-height: 350px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 20px;
   background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
