--- a/client/src/Components/List/List.css
+++ b/client/src/Components/List/List.css
@@ -18,5 +18,18 @@
     color: white;
     height: 4rem !important;
     width: 4rem !important;
+}
 
+.MuiSvgIcon-fontSizeLarge {
+    height: 4rem !important;
+    width: 4rem !important;
+}
+
+.test {
+    color: #d5dcf8 !important;
+    margin: auto !important;
+}
+
+.test:disabled {
+    display: none;
 }
