Navbar fixed up, prepared for individual profile pages
- Also fixed some react warnings to do with the navbar

--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -26,6 +26,10 @@
     width: 100%;
     margin-right: 2rem;
   }
+
+  .nav-item:hover {
+    cursor: pointer;
+  }
   
   .nav-item:last-child {
     margin-top: auto;
