Timer uses hooks

--- a/client/src/Components/Timer/Timer.css
+++ b/client/src/Components/Timer/Timer.css
@@ -21,6 +21,11 @@
     width: 5%;
 }
 
+.icons {
+    font-size: 3rem !important;
+    margin: 0px 30px;
+}
+
 .timer:disabled {
     font-size: 118px;
     border: none;
