--- a/client/src/Components/List/column.css
+++ b/client/src/Components/List/column.css
@@ -1,6 +1,6 @@
 .column-title {
     border: none;
-    display: inline;
+    /* display: inline; */
     text-align: center;
-    width: 100%;
+    width: 65%;
 }
