--- a/client/src/GroupStudy/GroupTimer/Timer.css
+++ b/client/src/GroupStudy/GroupTimer/Timer.css
@@ -13,11 +13,14 @@
 }
 
 .timer-backdrop {
-    margin-top: 100px;
     padding: 50px;
     width: 50%;
     margin: auto;
     margin-top: 100px;
+    padding: 40px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 20px;
+    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 }
 
 /* .controls {
